--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,7 +4,11 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Gum
+        title RTGoom
+        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
     body 
-        h1 It works!
+        header
+            h1 RTGoom
+        main
+            h2 Call
         script(src="public/js/app.js") 
