add and setting socket.io

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -11,4 +11,5 @@ html(lang="en")
             h1 RTGoom
         main
             h2 Call
+        script(src="/socket.io/socket.io.js") 
         script(src="public/js/app.js") 
