--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -4,12 +4,32 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title RTGoom
-        link(rel="stylesheet", href="https://unpkg.com/mvp.css")
-    body 
-        header
-            h1 RTGoom
-        main
-            h2 Call
+        title watchinggo
+        link(rel="stylesheet", href="public/css/style.css")
+    body(class="flex flex-col justify-center items-center")
+        header(class="container flex justify-center items-center")
+            h1(class="text-lg font-bold") watchinggo
+        main(class="container flex justify-center items-center")
+            div#welcome(class="")
+                form(class="")
+                    input(placeholder="room name",required, type="text")
+                    button Enter Room      
+            div#call(class="")
+                div#myStream(class='')
+                    video#myFace(autoplay, playsinline, width="300", height="300")
+                    button#mute Mute
+                    button#camera Turn Camera off
+                    select#cameras
+                div#game
+                    div#turn
+                    canvas#gameBoard(width="670", height="670")
+                div#modal
+                    div#overlay
+                    div#content
+                        h1#winner
+                        button#reload
+                        button#cancel
+                div#peerStream
+                    video#peerFace(autoplay, playsinline, width="300", height="300")
         script(src="/socket.io/socket.io.js") 
-        script(src="public/js/app.js") 
+        script(src="public/js/app.js")
