start 버튼을 누르면 start_game 이벤트 발생 서버에서 랜덤으로 black, white 돌을 정하고 stone 이벤트로 각각 user에게 보낸다 받은 stone 정보를 localStorage에 저장해서 게임시작 게임시작은 되지만 게임 종료 시 액션은 진행 중

--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -19,15 +19,16 @@ html(lang="en")
                     button(class="welcome-button") Enter Room      
             div#call(class="",hidden=true)
                 div#myStream(class='')
-                    video#myFace(autoplay, playsinline, width="300", height="300",class="rounded-md")
-                    button#mute Mute
-                    button#camera Turn Camera off
-                    select#cameras
-                    button#myReadyBtn Ready
+                    div
+                        video#myFace(autoplay, playsinline, width="300", height="300",class="rounded-md")
+                        button#mute Mute
+                        button#camera Turn Camera off
+                        select#cameras
+                    div
+                        button#myReadyBtn Start
                 div#game
                     div#turn
                     canvas#gameBoard(width="670", height="670", class="bg-amber-300 rounded-md")
-                    div#startBtn Start
                 div#modal
                     div#overlay
                     div#content
