--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -33,8 +33,8 @@ html(lang="en")
                     div#overlay
                     div#content
                         h1#winner
-                        button#reload
-                        button#cancel
+                        button#reload Restart
+                        button#cancel Cancel
                 div#peerStream
                     video#peerFace(autoplay, playsinline, width="300", height="300",class="rounded-md")
                     div#peerReadyStatus
@@ -42,6 +42,7 @@ html(lang="en")
         script(src="public/js/app.js")
         script(src="public/js/board.js")
         script(src="public/js/createId.js")
+        script(src="public/js/modal.js")
         script(src="public/js/game.js")
         script(src="public/js/setRange.js")
         script(src="public/js/stones.js")
