--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -30,9 +30,9 @@ html(lang="en")
                                         button#mute Mute
                                         button#camera Turn Camera off
                         div#peerStream
-                            video#peerFace(autoplay, playsinline, width="200",class="rounded-md")
+                            video#peerFace(autoplay, playsinline, width="200",class="h-[150px] rounded-md border bg-gray-200")
                     div(class="flex justify-center items-center mb-2 rounded-md border border-amber-300")
-                        button#myStartBtn(class="p-2",hidden="true") Start
+                        div#myStartBtn(class="w-full h-full p-2 text-center cursor-pointer",hidden="true") Start
                     div#game
                         canvas#gameBoard(width="670", height="670", class="bg-amber-300 rounded-md")
                     div#modal
