update:modal창 modal 디자인 수정 준비 메세지 추가 준비 클릭시 소켓 통신 코드 함수화

--- a/src/assets/css/build.css
+++ b/src/assets/css/build.css
@@ -6,7 +6,10 @@
       @apply w-full p-3 my-3 border rounded-md;
     }
     .welcome-button {
-      @apply w-full border-2 border-amber-400 p-2 rounded-md hover:bg-amber-400 disabled:border-transparent disabled:bg-slate-200
+      @apply w-full border-2 border-amber-300 p-2 rounded-md hover:bg-amber-300 disabled:border-transparent disabled:bg-slate-200
+    }
+    .base-button{
+      @apply flex justify-center items-center rounded-md border border-amber-300
     }
     #modal {
       @apply w-full h-full fixed top-0 left-0 justify-center items-center;
@@ -16,7 +19,7 @@
       background-color: rgba(0, 0, 0, 0.6);
     }
     #modalContent {
-      @apply bg-white relative text-center rounded-md w-1/4 h-16 top-0;
+      @apply flex flex-col justify-center items-center bg-white relative text-center rounded-md w-1/4 h-40 top-0;
       box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     }
 }
